# bblib

./: .gitignore  404.html  CITATION.cff  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
bblib/: geometry.py  methods.py  models.py  utils.py
docs/: index.md
docs/reference/: contact.md  index.md  install.md  methods.md  models.md  usage.md  utils.md
docs/tutorial/: index.md
reference/: index.html
reference/contact/: index.html
reference/install/: index.html
reference/methods/: index.html
reference/models/: index.html
reference/usage/: index.html
reference/utils/: index.html
scripts/algorithms/: batch_center.sh  batch_center_of_mass.sh  batch_f2x_center.sh  batch_fine_fwhm.sh  batch_index.sh  batch_index_fosakp.sh  batch_index_lyso.sh  batch_regae.sh  batch_write_peaks.sh  batch_write_peaks_for_integration.sh  center.txt  clean_geom_folder.sh  compress_to_clustering.py  config.yaml  exctract_features.py  extract_features.py  find_center.py  find_center_friedel.py  find_center_of_mass.py  get_hits_list.py  hit_pre_filter.py  k_means_clustering.py  list_hits.py  make_movie.py  merge_lists.sh  merge_streams.sh  methods.py  models.py  plot_center.py  plot_shift_in_time.py  run_indexamajig.sh  settings.py  split.sh  stream2sol.py  turbo_center.sh  turbo_pre_filter.sh  utils.py  visual_check_cluster.sh  write_peak_list.py  write_peak_list_for_indexing.py
scripts/archive/: autocorrelation.txt  batch_center_of_mass.sh  compress_to_clustering.py  extract_features.py  find_center_friedel.py  find_center_friedel_sorted.py  find_center_of_mass.py  fwhm_direct_search.txt  k_means_clustering.py  make_movie.py  polarization.py  total_distance.txt  utils  visual_check_cluster.sh
scripts/hdf5_writter/: write_peak_list_for_indexing.py
scripts/utils/: batch_center_lyso.sh  run_index.sh  (+11 more)
search/: search_index.json
site/: 404.html  objects.inv
stylesheets/: typewriter.css
tests/: .coverage  results_fast.prof  test_methods.py  test_methods_center_of_mass.py  test_methods_circle_detection.py  test_methods_friedel_pairs.py  test_methods_minimize_fwhm.py  test_utils.py
tutorial/: index.html
(+32 files in other folders)
