[tool.poetry]
name = "bblib"
version = "1.1.0"
description = "beambusters library to refine the detector center for crystallography data processing."
authors = ["Ana Rodrigues <ana.rodrigues@desy.de>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
abstract = "2022.7.10"
base32hex = "1.0.2"
black = "24.1.1"
build = "1.0.3"
cachecontrol = "0.14.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
colouration = "2020.7.26"
contourpy = "1.2.0"
crashtest = "0.4.1"
cryptography = "42.0.5"
cycler = "0.12.1"
cython = "3.0.8"
distlib = "0.3.8"
dulwich = "0.21.7"
fabio = "2023.10.0"
fastjsonschema = "2.19.1"
filelock = "3.13.1"
fonttools = "4.48.1"
graphviz = "0.20.1"
h5py = "3.10.0"
hdf5plugin = "4.4.0"
idna = "3.6"
imageio = "2.33.1"
importlib-metadata = "7.0.1"
installer = "0.7.0"
jaraco-classes = "3.3.1"
jeepney = "0.8.0"
keyring = "24.3.0"
kiwisolver = "1.4.5"
lazy-loader = "0.3"
llvmlite = "0.42.0"
lxml = "5.1.0"
markdown-it-py = "3.0.0"
matplotlib = "3.8.2"
mdurl = "0.1.2"
more-itertools = "10.2.0"
msgpack-numpy = "0.4.8"
mypy-extensions = "1.0.0"
networkx = "3.2.1"
numpy = "1.26.4"
ondamonitor = "23.8.3"
packaging = "23.2"
pandas = "2.2.0"
pathspec = "0.12.1"
pexpect = "4.9.0"
pillow = "10.2.0"
pkginfo = "1.9.6"
platformdirs = "4.2.0"
poetry = "1.8.0"
poetry-core = "1.9.0"
poetry-plugin-export = "1.6.0"
ptyprocess = "0.7.0"
pycparser = "2.21"
pygments = "2.17.2"
pyparsing = "3.1.1"
pyproject-hooks = "1.0.0"
python-dateutil = "2.8.2"
pytz = "2024.1"
pyyaml = "6.0.1"
pyzmq = "25.1.2"
rapidfuzz = "3.6.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rich = "13.7.0"
ruamel-yaml = "0.18.6"
ruamel-yaml-clib = "0.2.8"
scikit-image = "0.22.0"
scipy = "1.12.0"
secretstorage = "3.3.3"
shellingham = "1.5.4"
six = "1.16.0"
tifffile = "2024.2.12"
tomli = "2.0.1"
tomlkit = "0.12.3"
trove-classifiers = "2024.2.23"
typing-extensions = "4.10.0"
tzdata = "2024.1"
urllib3 = "2.2.1"
virtualenv = "20.25.1"
zipp = "3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
